# hexagonal-user-service

./: README.md  pyproject.toml
src/userservice/: __init__.py
src/userservice/adapters/services/: users.py
src/userservice/domain/model/: aggregate.py  events.py  exceptions.py  model.py  schemas.py
src/userservice/domain/ports/services/: users.py
tests/: test_aggregates.py  test_services.py  test_use_cases.py
