[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "userservice"
authors = [{name = "Shako Rzayev", email = "rzayev.sehriyar@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "eventsourcing >=9.2.19",
    "marshmallow >=3.19.0",
    "readonce >=1.0.2",
]

[project.urls]
Home = "https://github.com/ShahriyarR/hexagonal-user-login"


[project.optional-dependencies]
dev = [
    "black >=23.1.0",
    "isort >=5.12.0",
    "autoflake >=1.4",
    "flake8 >=6.0.0",
    "pre-commit >=2.21.0",
    "pytype >= 2023.2.17 ",
    "bandit >= 1.7.4",
    "flake8-bugbear >= 22.12.6",
    "flake8-cognitive-complexity >= 0.1.0",
    ]
test = [
    "pytest ==7.1.3",
    "pytest-cov == 3.0.0",
]

